# Nhom21-403-Day06

./: .env  .env.example  .gitignore  02-ux-exercise.md  README.md  api.py  app.py  feedback.md  flight_ticket_fare_data.json  main.py  plan.md  pland.md  prototype-readme.md  pyproject.toml  reflection.md  requirements.txt  spec-draft.md  spec-final.md  state.py  test_case.md  utils.py
02-templates/: spec-answer.md
data_feature1/: mock_flights.json
frontend/: .gitignore  next.config.ts
frontend/src/app/: globals.css  page.tsx
prompts/: extraction_prompt.txt  feature1_prompt.txt  response_prompt.txt
src/: database.py  llm_engine.py  prompts.py
tools/: baggage_tools.py  fare_tools.py  flight_tools.py  ticket_tools.py
